# dnsco

./: .gitignore  Cargo.toml  Procfile  READEME.md
dnsco-app/: Cargo.toml
dnsco-app/src/: app.rs  app_error.rs  app_service.rs  config.rs  endpoints.rs  errors.rs  factory.rs  lib.rs  service.rs  templates.rs  webserver.rs
dnsco-app/src/domains/: activities.rs  home.rs
dnsco-app/src/service/: activities.rs  home.rs  mod.rs
dnsco-app/src/templates/: activities.rs  activities_template.rs  home.rs  index_template.rs  mod.rs
dnsco-app/templates/: activities.html  index.html
dnsco-data/: Cargo.toml
dnsco-data/migrations/2019-05-31-210255_create_activities/: up.sql
dnsco-data/migrations/2019-06-19-210619_store_oauth_tokens/: down.sql  up.sql
dnsco-data/src/: data_error.rs  database.rs  lib.rs  models.rs  repos.rs  request_context.rs  schema.rs  strava_api.rs
dnsco-data/src/domains/: activities.rs  mod.rs  oauth_tokens.rs
dnsco-data/src/models/: activities.rs  oauth_tokens.rs
dnsco-data/tests/: database_tests.rs
dnsco-service/: Cargo.toml
dnsco-service/src/: config.rs  lib.rs  templates.rs  webserver.rs
dnsco-service/src/templates/: mod.rs
dnsco-service/templates/: activities.html  index.html
src/: auth.rs  main.rs  service.rs  templates.rs
src/service/: mod.rs  strava_api.rs  webserver.rs
src/strava/: api.rs  auth.rs  errors.rs  mod.rs  oauth.rs
strava/: Cargo.toml
strava/src/: api.rs  errors.rs  lib.rs  models.rs  oauth.rs
strava/src/models/: activity.rs  athlete.rs  mod.rs
templates/: index.hbs  index.html
