[package]
name = "dnsco"
version = "0.1.0"
authors = ["Dennis Collective <dennis.collective@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4"
pretty_env_logger = "0.3"

dnsco-app= { path = "dnsco-app" }
dnsco-data = { path = "dnsco-data" }
dnsco-service = { path = "dnsco-service" }
strava = { path = "strava" }


[workspace]
members = [
  "dnsco-app",
  "dnsco-data",
  "dnsco-service",
  "strava"
]