[package]
name = "dnsco-app"
version = "0.1.0"
authors = ["Dennis Collective <dennis.collective@gmail.com>"]
edition = "2018"
workspace= ".."

[dependencies]
actix-web= "^1.0.0"
failure = "0.1.5"
futures = "0.1.27"
log = "0.4"
http = "0.1.17"
url = "1"


dnsco-data = { path="../dnsco-data" }
dnsco-service = { path="../dnsco-service" }
strava = { path="../strava" }

