[package]
name = "dnsco-data"
version = "0.1.0"
authors = ["Dennis Collective <dennis.collective@gmail.com>"]
edition = "2018"
workspace = ".."

[dependencies]
diesel = { version = "1.0.0", features = ["postgres", "r2d2"] }
failure = "0.1.5"
serde = "1"
serde_json = "1"

strava = { path="../strava"}

