[package]
name = "dnsco-service"
version = "0.1.0"
authors = ["Dennis Collective <dennis.collective@gmail.com>"]
edition = "2018"
workspace = ".."

[dependencies]
askama = "0.8.0"
chrono = "0.4"
serde = "1"
serde_json = "1"
url = "1"

dnsco-data = { path="../dnsco-data" }
strava = { path="../strava" }
